--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -16,11 +16,7 @@
   <div class="flex flex-col lg:flex-row gap-2">
     <div class="w-full lg:w-3/5">
       <!-- Today's Financial News -->
-<<<<<<< Updated upstream
-      <%= render_card title: "Today's Financial news", class: "w-full p-4" do %>
-=======
       <%= render_card title: "Today's Financial news", class: "w-full min-w-[350px] p-4" do %>
->>>>>>> Stashed changes
         <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
           <%= render_skeleton %>
         <% end %>
@@ -59,28 +55,8 @@
   </div>
 
   <!-- Market Trends -->
-<<<<<<< Updated upstream
-  <%= render_card title: "Market trends", class: "w-full p-4" do %>
-    <ul class="flex flex-row gap-2">
-      <li>
-        <%= link_to stocks_tables_path(filter: 'most-active'), data: { turbo_frame: 'market_trends_frame', controller: 'update-link-appearance' }, class: "border rounded-full py-1 px-3 bg-blue-100" do %>
-          <i class="fas fa-chart-line mr-1"></i> Most Active
-        <% end %>
-      </li>
-      <li>
-        <%= link_to stocks_tables_path(filter: 'gainers'), data: { turbo_frame: 'market_trends_frame', controller: 'update-link-appearance' }, class: "border rounded-full py-1 px-3" do %>
-          <i class="fas fa-caret-up text-green-500 mr-1"></i> Gainers
-        <% end %>
-      </li>
-      <li>
-        <%= link_to stocks_tables_path(filter: 'losers'), data: { turbo_frame: 'market_trends_frame', controller: 'update-link-appearance' }, class: "border rounded-full py-1 px-3" do %>
-          <i class="fas fa-caret-down text-red-500 mr-1"></i> Losers
-        <% end %>
-      </li>
-    </ul>
-
-=======
   <% filters = [
+    { name: 'Iex Volume', path: 'iexvolume', icon: 'fas fa-chart-line' },
     { name: 'Most Active', path: 'most-active', icon: 'fas fa-chart-line' },
     { name: 'Gainers', path: 'gainers', icon: 'fas fa-caret-up text-success' },
     { name: 'Losers', path: 'losers', icon: 'fas fa-caret-down text-destructive' }] %>
@@ -89,10 +65,10 @@
     <ul class="flex flex-row gap-2 px-4">
       <% filters.each do |filter| %>
         <li class='flex flex-row gap-2 flex-nowrap'>
-          <%= link_to stocks_tables_path(filter: filter[:path]),
+          <%= link_to stocks_tables_path(filter: filter[:path] ),
             data: { turbo_frame: 'market_trends_frame', controller: 'update-link-appearance' }, 
             class: "border rounded-full py-2 px-4 text-sm truncate" do %>
-            <i class="<%= filter[:icon] %> mr-1"></i> Most Active
+            <i class="<%= filter[:icon] %> mr-1"></i> <%= filter[:name] %>
           <% end %>
         </li>
       <% end %> 
@@ -100,7 +76,6 @@
 
     <%= render_separator class: 'my-6' %>
 
->>>>>>> Stashed changes
     <%= turbo_frame_tag 'market_trends_frame', src: stocks_tables_path(filter: params[:filter]) do %>
       <%= render_skeleton %>
     <% end %>
