--- a/app/views/components/navbar/_shared_buttons.html.erb
+++ b/app/views/components/navbar/_shared_buttons.html.erb
@@ -3,15 +3,5 @@
 <% end %>
 
 <% if current_user.role == 'standard' %>
-  <%= render_dialog do %>
-    <%= dialog_trigger do %>
-      <%= render_button("Buy / Sell", variant: :outline) %>
-    <% end %>
-    <%= dialog_content do %>
-      <div class="w-full">
-        <h1 class="font-semibold">Buy / Sell stock</h1>
-        <%= render "transactions/form", transaction: @transaction, items: @stocks %>
-      </div>
-    <% end %>
-  <% end %>
+  <%= render_button("Buy / Sell", variant: :outline, as: :link, href: new_transaction_path, data: { turbo_frame: 'transaction_frame' }) %>
 <% end %>
