--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,58 +1,68 @@
-<div class="flex space-x-4">
-  <%= link_to "Buy", new_transaction_path(transaction_type: 'buy'), method: :get, class: "button button-primary" %>
-  <%= link_to "Sell", new_transaction_path(transaction_type: 'sell'), method: :get, class: "button button-primary" %>
-</div>
-
 <div class="flex flex-col gap-2">
-  <!-- Search stocks -->
-  <div class="flex w-full justify-center items-center p-4">
-    <%= render_filter @stocks, placeholder: "Search for stocks", data: { action: ""}, class: "rounded-md" do %>
-      <%= filter_icon do %>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2 h-4 w-4 shrink-0 opacity-50 ml-2"><circle cx="11" cy="11" r="8"></circle><line x1="21" x2="16.65" y1="21" y2="16.65"></line></svg>
+    <!-- Search stocks -->
+    <div class="flex w-full justify-center items-center p-4">
+      <%= render_filter @stocks, placeholder: "Search for stocks", data: { action: ""}, class: "rounded-md" do %>
+        <%= filter_icon do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2 h-4 w-4 shrink-0 opacity-50 ml-2"><circle cx="11" cy="11" r="8"></circle><line x1="21" x2="16.65" y1="21" y2="16.65"></line></svg>
+        <% end %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
 
-  <div class="flex flex-col lg:flex-row gap-2">
-    <div class="w-full lg:w-3/5">
+    <div class="flex flex-col flex-col-reverse h-4/6 lg:flex-row gap-2">
       <!-- Today's Financial News -->
-      <%= render_card title: "Today's Financial news", class: "w-full min-w-[350px] p-4" do %>
-        <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
-          <%= render_skeleton %>
-        <% end %>
-      <% end %>
-    </div>
+        <div class="w-full lg:w-3/5">
+          <%= turbo_frame_tag "details" do %>
+            <%= render_card title: "Today's Financial news", class: "w-full p-4" do %>
+              <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
+                <%= render_skeleton %>
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
 
-    <div class="flex flex-col w-full lg:w-2/5 gap-2">
-      <!-- Market Trends -->
-      <%= render_card title: "Market trends", class: "p-4 w-full" do %>
-        <ul class="flex flex-row flex-wrap gap-2">
-          <li>
-            <%= link_to stocks_tables_path(filter: 'most-active'), class: "border rounded-full py-1 px-3" do %>
-              <i class="fas fa-chart-line mr-1"></i> Most Active
-            <% end %>
-          </li>
-          <li>
-            <%= link_to stocks_tables_path(filter: 'gainers'), class: "border rounded-full py-1 px-3" do %>
-              <i class="fas fa-caret-up text-green-500 mr-1"></i> Gainers
-            <% end %>
-          </li>
-          <li>
-            <%= link_to stocks_tables_path(filter: 'losers'), class: "border rounded-full py-1 px-3" do %>
-              <i class="fas fa-caret-down text-red-500 mr-1"></i> Losers
-            <% end %>
-          </li>
-        </ul>
-      <% end %>
+      <div class="flex flex-col w-full lg:w-2/5 gap-2">
+        <%= turbo_frame_tag "transaction_frame" do %>
+          <div class="flex flex-col gap-2">
+            
+            <!-- Portfolio Overview -->
+            <%= turbo_frame_tag "portfolio_frame", src: portfolios_path, class: "w-full max-h-80 overflow-y-auto scroll-smooth scrollbar-none" %>
 
-      <!-- You may be interested in -->
-      <%= render_card title: "You may be interested in", class: "p-4 w-full" do %>
-        <%= turbo_frame_tag :stocks_tables, src: stocks_tables_path(filter: 'iexvolume') do %>
-          <% render_skeleton %>
+            <!-- Market Trends -->
+            <%= render_card title: "Market trends", class: "p-4 w-full" do %>
+              <%= render_separator class: 'my-6' %>
+              <ul class="flex flex-row flex-wrap gap-2">
+                <li>
+                  <%= link_to stocks_tables_path(filter: 'most-active'), class: "border rounded-full py-1 px-3" do %>
+                    <i class="fas fa-chart-line mr-1"></i> Most Active
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to stocks_tables_path(filter: 'gainers'), class: "border rounded-full py-1 px-3" do %>
+                    <i class="fas fa-caret-up text-green-500 mr-1"></i> Gainers
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to stocks_tables_path(filter: 'losers'), class: "border rounded-full py-1 px-3" do %>
+                    <i class="fas fa-caret-down text-red-500 mr-1"></i> Losers
+                  <% end %>
+                </li>
+              </ul>
+            <% end %>
+
+            <!-- You may be interested in -->
+            <div class="w-full">
+              <%= render_card title: "You may be interested in", class: "p-4 w-full" do %>
+                <%= render_separator class: 'my-6' %>
+                <%= turbo_frame_tag :stocks_tables, src: stocks_tables_path(filter: 'iexvolume'), class: "w-full max-h-48 overflow-y-auto scroll-smooth scrollbar-none" do %>
+                  <% render_skeleton %>
+                <% end %>
+              <% end %>
+
+            </div>
+          </div>
         <% end %>
-      <% end %>
+      </div>
     </div>
-  </div>
 
   <!-- Market Trends -->
   <% filters = [
