--- a/app/views/stocks_details/_info.html.erb
+++ b/app/views/stocks_details/_info.html.erb
@@ -1,12 +1,25 @@
 <% if details.nil? || details.empty? %>
   <p class='text-sm text-center text-muted-foreground font-bold mt-4'>No stock selected</p>
 <% else %>
-  <%= line_chart chart_data,
-    id: 'stock-chart',
-    xtitle: 'Date',
-    ytitle: 'Close Price',
-    discrete: true,
-    points: false
-  %>
-  <%= details %>
+  <div class="flex flex-col gap-2">
+    <%= render_card title: "#{details.company_name}", class: "w-full" do %>
+      <%= line_chart chart_data,
+        id: 'stock-chart',
+        xtitle: 'Date',
+        ytitle: 'Close Price',
+        discrete: true,
+        points: false
+      %>
+    <% end %>
+    <%= render_card do %>
+      <div class="flex flex-col gap-2 p-4 w-full">
+        <%= "Average Total Volume: #{details.avg_total_volume}"  %>
+        <%= "Change: #{details.change_percent_s}"  %>
+        <%= "Latest Price: #{details.latest_price}"  %>
+        <%= "PE Ratio: #{details.pe_ratio}"  %>
+        <%= "Previous Close: #{details.previous_close}"  %>
+        <%= "Primary Exchange: #{details.primary_exchange}"  %>
+      </div>
+    <% end %>
+  </div>
 <% end %> 
