--- a/app/views/stocks_articles/show.html.erb
+++ b/app/views/stocks_articles/show.html.erb
@@ -1,14 +1,20 @@
 <%= turbo_frame_tag :stocks_articles do %>
   <% @news_feed.each do |article| %>
-      <div class='flex flex-col md:flex-row justify-between p-4 gap-4'> 
-      <div class="flex flex-col">
-        <div class="flex text-xs text-muted-foreground gap-2">
-          <h2><%= article[:source] %></h2> |
-          <span><%= time_ago(article[:datetime]) %></span>
-        </div>
-        <h1 class="font-medium"><%= article[:headline] %></h1>
+    <div class='flex flex-col w-full p-4 gap-4'> 
+      <div class='flex flex-row text-xs text-muted-foreground gap-2'>
+        <h2><%= article[:source] %></h2>
+        <span>|</span>
+        <span><%= time_ago(article[:datetime]) %></span>
       </div>
-      <%= image_tag(article[:image], class: "h-auto w-full md:w-24 object-cover rounded") %>
+      <div class='flex flex-col w-full lg:flex-row gap-2'>
+        <div class='w-full'>
+          <h1 class='font-medium overflow-hidden text-clip'><%= article[:headline] %></h1>
+        </div>
+        <div class='bg-red-200 h-auto w-full lg:w-28 rounded overflow-hidden'>
+          <%= image_tag article[:image], 
+            class: 'h-full w-full object-cover' %>
+        </div>
+      </div>
     </div> 
     <%= render_separator class: 'my-4' %>
   <% end %>
