--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,8 +1,3 @@
-<div class="flex space-x-4">
-  <%= link_to "Buy", new_transaction_path(transaction_type: 'buy'), method: :get, class: "button button-primary" %>
-  <%= link_to "Sell", new_transaction_path(transaction_type: 'sell'), method: :get, class: "button button-primary" %>
-</div>
-
 <div class="flex flex-col gap-2">
   <!-- Search stocks -->
   <div class="flex w-full justify-center items-center p-4">
@@ -14,71 +9,24 @@
   </div>
 
   <div class="flex flex-col lg:flex-row gap-2">
-    <div class="w-full lg:w-3/5">
-      <!-- Today's Financial News -->
-      <%= render_card title: "Today's Financial news", class: "w-full min-w-[350px] p-4" do %>
-        <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
-          <%= render_skeleton %>
-        <% end %>
-      <% end %>
-    </div>
-
-    <div class="flex flex-col w-full lg:w-2/5 gap-2">
-      <!-- Market Trends -->
-      <%= render_card title: "Market trends", class: "p-4 w-full" do %>
-        <ul class="flex flex-row flex-wrap gap-2">
-          <li>
-            <%= link_to stocks_tables_path(filter: 'most-active'), class: "border rounded-full py-1 px-3" do %>
-              <i class="fas fa-chart-line mr-1"></i> Most Active
-            <% end %>
-          </li>
-          <li>
-            <%= link_to stocks_tables_path(filter: 'gainers'), class: "border rounded-full py-1 px-3" do %>
-              <i class="fas fa-caret-up text-green-500 mr-1"></i> Gainers
-            <% end %>
-          </li>
-          <li>
-            <%= link_to stocks_tables_path(filter: 'losers'), class: "border rounded-full py-1 px-3" do %>
-              <i class="fas fa-caret-down text-red-500 mr-1"></i> Losers
-            <% end %>
-          </li>
-        </ul>
-      <% end %>
-
-      <!-- You may be interested in -->
-      <%= render_card title: "You may be interested in", class: "p-4 w-full" do %>
-        <%= turbo_frame_tag :stocks_tables, src: stocks_tables_path(filter: 'iexvolume') do %>
-          <% render_skeleton %>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-
-  <!-- Market Trends -->
-  <% filters = [
-    { name: 'Iex Volume', path: 'iexvolume', icon: 'fas fa-chart-line' },
-    { name: 'Most Active', path: 'most-active', icon: 'fas fa-chart-line' },
-    { name: 'Gainers', path: 'gainers', icon: 'fas fa-caret-up text-success' },
-    { name: 'Losers', path: 'losers', icon: 'fas fa-caret-down text-destructive' }] %>
-
+  <!-- Stocks Table -->
   <%= render_card title: "Market trends", class: "w-full p-4 min-w-[350px] overflow-hidden" do %>
-    <ul class="flex flex-row gap-2 px-4">
-      <% filters.each do |filter| %>
-        <li class='flex flex-row gap-2 flex-nowrap'>
-          <%= link_to stocks_tables_path(filter: filter[:path] ),
-            data: { turbo_frame: 'market_trends_frame', controller: 'update-link-appearance' }, 
-            class: "border rounded-full py-2 px-4 text-sm truncate" do %>
-            <i class="<%= filter[:icon] %> mr-1"></i> <%= filter[:name] %>
-          <% end %>
-        </li>
-      <% end %> 
-    </ul>
-
+    <%= render 'stock_filters' %>
     <%= render_separator class: 'my-6' %>
 
     <%= turbo_frame_tag 'market_trends_frame', src: stocks_tables_path(filter: params[:filter]) do %>
       <%= render_skeleton %>
     <% end %>
   <% end %>
+
+  <!-- News Articles -->
+    <div class="w-full lg:w-3/5">
+      <%= render_card title: "Today's Financial news", class: "w-full min-w-[350px] p-4" do %>
+        <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
+          <%= render_skeleton %>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 
 </div>
