chore: render suggestion items based on types form or link

--- a/app/views/stocks_search/_suggestions.html.erb
+++ b/app/views/stocks_search/_suggestions.html.erb
@@ -1,10 +1,10 @@
 <% unless @suggestions.nil? || @suggestions.empty? %>
   <ul>
     <% @suggestions.cycle.take([@suggestions.count, 5].min).each do |item| %>
-      <%= form_with url: stocks_details_path, method: :get do |f| %>
-        <%= f.submit name:'symbol', 
-          value: item[:symbol], 
-          class: 'w-full relative flex cursor-pointer select-none items-center rounded-sm px-2 py-1.5 text-sm outline-none aria-selected:bg-accent aria-selected:text-accent-foreground hover:bg-accent hover:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50' %>
+      <% if type === 'form' %>
+        <%= render partial: 'suggestions_form', locals: { item: item } %>
+      <% else %>
+        <%= render partial: 'suggestions_link', locals: { item: item } %>
       <% end %>
     <% end %>
   </ul>
