--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,10 +1,10 @@
-<div class="flex flex-col gap-2">
+<div class="relative flex flex-col gap-2">
   <!-- Search stocks -->
-  <div class="flex w-full justify-center items-center p-4">
+  <div class="relative flex w-full justify-center items-center p-4 z-10">
     <%= render partial: 'stocks_search/form', locals: { type: :link } %>
   </div>
 
-  <div class="flex flex-col lg:flex-row gap-2">
+  <div class="relative flex flex-col lg:flex-row gap-2 z-0">
   <!-- Stocks Table -->
   <%= render_card title: "Market trends", class: "w-full p-4 min-w-[350px] overflow-hidden" do %>
     <%= render 'stock_filters' %>
@@ -16,7 +16,7 @@
   <% end %>
 
   <!-- News Articles -->
-    <div class="w-full lg:w-3/5">
+    <div class="relative w-full lg:w-3/5 z-0">
       <%= render_card title: "Today's Financial news", class: "w-full min-w-[350px] p-4" do %>
         <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
           <%= render_skeleton %>
