refactor: improve reusability of transaction search component
- change name from user_transactions to transactions

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -12,7 +12,7 @@
 
     <%= render_separator class: 'my-6' %>
 
-    <turbo-frame id="user_transactions">
+    <turbo-frame id="transactions">
       <%= render partial: 'transactions/user_transactions_table' %>
     </turbo-frame>
 
