--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,6 +1,6 @@
-<div class="flex items-center justify-center p-4" data-controller="transaction-form">
+<div class="flex items-center justify-center p-4">
     <div class="p-4">
-      <%= render_form_for(transaction, autocomplete: 'off') do |form| %>
+      <%= render_form_for(transaction) do |form| %>
         <div class="flex flex-wrap items-end gap-2 p-4">
 
           <div>
