--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,16 +38,10 @@
     </div>
 
     <div class="container mt-16 lg:mt-0">
-      <div x-transition:enter="transition-opacity ease-out duration-300"
-         x-transition:enter-start="opacity-0 transform translate-y-[-10px]"
-         x-transition:enter-end="opacity-100 transform translate-y-0"
-         x-transition:leave="transition-opacity ease-in duration-300"
-         x-transition:leave-start="opacity-100 transform translate-y-0"
-         x-transition:leave-end="opacity-0 transform translate-y-[-10px]" 
-         class="w-full fixed top-0 left-0 z-50 p-4">
-        <div class="flex flex-row-reverse justify-center items-start gap-2 mt-16">
-          <%= turbo_frame_tag "transaction_frame", class: "w-1/2" %>
-          <%= turbo_frame_tag "details", class: "w-1/2 bg-white" %>
+      <div class="w-full fixed top-0 left-0 z-50 p-4">
+        <div class="flex flex-col lg:flex-row justify-center items-start gap-2 mt-16">
+          <%= turbo_frame_tag "details", class: "w-full lg:w-1/2 bg-white" %>
+          <%= turbo_frame_tag "transaction_frame", class: "w-full lg:w-1/2" %>
         </div>
       </div>
 
