--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "transaction_frame" do %>
-  <div class='h-full w-full flex items-center justify-center border rounded-lg py-4 bg-accent mb-16'>
+  <div class='h-full w-full flex items-center justify-center border rounded-lg py-4 bg-accent mb-16 shadow-md slide-down'>
     <div class="flex flex-col items-center w-full gap-4">
       <%= render_tabs do %>
         <%= tab_list do %>
