fix: transaction form fields and stock details view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 
     <div class="container mt-16 lg:mt-0">
       <div class="w-full fixed top-0 left-0 z-50 p-4">
-        <div class="flex flex-col lg:flex-row justify-center items-start gap-2 mt-16">
+        <div class="flex flex-col-reverse lg:flex-row justify-center items-start gap-2 mt-16">
           <%= turbo_frame_tag "details", class: "w-full lg:w-1/2 bg-white" %>
           <%= turbo_frame_tag "transaction_frame", class: "w-full lg:w-1/2" %>
         </div>
