--- a/app/views/stocks_search/_form.html.erb
+++ b/app/views/stocks_search/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render_card class: 'h-fit' do %>
+<%= render_card class: 'h-full w-full' do %>
   <%= form_with url: stocks_search_path, 
     method: :get, 
     data: { controller: 'auto-submit' },
