--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "transaction_frame" do %>
-  <div class='h-full w-full flex items-center justify-center border rounded-lg py-4 bg-accent mb-16 shadow-md slide-down'>
-    <div class="flex flex-col items-center w-full gap-4">
+  <div class='h-full w-full flex items-center justify-center border rounded-lg bg-accent py-4 shadow-md slide-down'>
+    <div class="flex flex-col items-center w-full gap-2">
       <%= render_tabs do %>
         <%= tab_list do %>
           <%= tab "Buy", active: true %>
