fix: pass missing local: 'type'

--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -9,7 +9,7 @@
 
         <%= tab_panels do %>
           <div class="p-4 bg-white">
-            <%= render 'stocks_search/form' %>
+            <%= render partial: 'stocks_search/form', locals: { type: :form } %>
           </div>
 
           <%= tab_panel active: true do %>
