--- a/app/views/components/ui/_skeleton.html.erb
+++ b/app/views/components/ui/_skeleton.html.erb
@@ -1,1 +1,9 @@
-<div class="preview flex min-h-[350px] w-full justify-center p-10 items-center"><div class="flex items-center space-x-4"><div class="animate-pulse bg-muted h-12 w-12 rounded-full"></div><div class="space-y-2"><div class="animate-pulse rounded-md bg-muted h-4 w-[250px]"></div><div class="animate-pulse rounded-md bg-muted h-4 w-[200px]"></div></div></div></div>
+<div class="preview flex w-full items-start p-4">
+  <div class="w-full flex items-center space-x-4">
+    <div class="animate-pulse bg-muted h-12 w-12 rounded-full"></div>
+    <div class="w-full space-y-2">
+      <div class="animate-pulse rounded-md bg-muted h-4 w-full"></div>
+      <div class="animate-pulse rounded-md bg-muted h-4 w-1/2"></div>
+    </div>
+  </div>
+</div>
