--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -26,8 +26,11 @@
         <div class="flex flex-col gap-2">
 
           <!-- Portfolio Overview -->
-          <%= render_card class: 'w-full min-w-[350px] overflow-hidden' do %>
-            <%= turbo_frame_tag "portfolio_frame", src: portfolios_path, class: "w-full max-h-80 overflow-y-auto scroll-smooth scrollbar-none" %>
+          <%= render_card class: 'h-96 w-full min-w-[350px] overflow-hidden' do %>
+            <%= turbo_frame_tag "portfolio_frame", src: portfolios_path, 
+              class: "w-full overflow-y-auto scroll-smooth scrollbar-none" do %>
+              <%= render_spinner %>
+            <% end %>
           <% end %>
 
           <!-- Today's Financial News -->
