--- a/app/views/stocks_search/_form.html.erb
+++ b/app/views/stocks_search/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render_card class: 'h-fit relative w-full' do %>
+<%= render_card class: 'h-fit relative w-full bg-background' do %>
   <%= form_with url: stocks_search_path,
     method: :get, 
     data: { controller: 'auto-submit' },
@@ -10,7 +10,6 @@
       variant: :borderless,
       data: { action: 'input->auto-submit#submit' } %>
   <% end %>
-  <%= render_separator %>
   <turbo-frame id="suggestions">
     <%= render partial: 'stocks_search/suggestions', locals: { 
       suggestions: @suggestions } %>
